--- a/cover/coverapp/static/cover.html
+++ b/cover/coverapp/static/cover.html
@@ -102,7 +102,7 @@
              <hr style="color: lightgreen;">
              </div>
              <div class="author">
-             <p><b>R MANIYARSAN</b></p>
+             <p><b>R MANIYARASAN</b></p>
              </div>
              <div class="pub">
                 SEC
